# rspc

./: Cargo.toml
crates/actix/: Cargo.toml
crates/actix/src/: extractor.rs  lib.rs
examples/actix/: Cargo.toml
examples/actix/src/: main.rs
examples/axum-prisma/: .gitignore  Cargo.toml
examples/axum-prisma/prisma/: schema.prisma
examples/axum-prisma/src/: main.rs
