[package]
name = "rspc-actix"
description = "Actix adapter for rspc"
version = "0.1.0"
authors = ["Johannes Grimm <grimmjohannes1998@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/rspc"
documentation = "https://docs.rs/rspc-actix/latest/rspc-actix"
keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs2" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs2",
] # TODO: Rename to `docsrs` once Tokio fixes https://github.com/tokio-rs/tokio/pull/6360

[features]
default = []
ws = ["actix-web-actors"]

[dependencies]
rspc = { version = "0.2.0", path = "../.." }
actix = "0.13.4"
actix-web = "4.7.0"
actix-web-actors = { version = "4.3.0", optional = true}
serde_json = "1.0.117"
tokio = { version = "1.36.0", features = ["full"] }
form_urlencoded = "1.2.1"
futures = "0.3.30"                              # TODO: No blocking execution, etc