[package]
name = "example-axum-prisma"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rspc = { path = "../../" }
rspc-axum = { path = "../../crates/axum", features = ["ws"] }
tokio = { version = "1.36.0", features = ["full"] }
async-stream = "0.3.5"
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.2", default-features = false, features = [
    "cors",
] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql", "mocking", "rspc"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql", "mocking", "rspc"]}
serde = "1.0.203"
